<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Project2</string>
    <string name="start_button">Start Game!</string>
    <string name="game_title">Checkers</string>
    <string name="menu_image_description">Checkers board in initial setup</string>
    <string name="done">Done</string>
    <string name="resign">Resign</string>
    <string name="turn_suffix">\'s Turn!</string>
    <string name="must_move_message">You must make a move before you end your turn!</string>
    <string name="game_over_title">Game Over!</string>
    <string name="game_over_win_suffix">wins!</string>
    <string name="menu_button">Menu</string>
    <string name="game_over_lose_suffix">loses!</string>
    <string name="invalid_move">That\'s an invalid move!</string>
    <string name="rules_title">How To Play</string>
    <string name="rules_button">How To Play</string>
    <string name="rules">Checkers is played by two opponents, on opposite sides of the game board.
        One player has the green pieces; the other has the white pieces. Players alternate turns.
        A player may not move an opponent\'s piece. A move consists of moving a piece diagonally to
        an adjacent unoccupied square. If the adjacent square contains an opponent\'s piece, and
        the square immediately beyond it is vacant, the piece may be captured (and removed from the
        game) by jumping over it. Only the dark squares of the checkered board are used. A piece may
        move only diagonally into an unoccupied square. When presented, capturing is mandatory in
        most official rules, although some rule variations make capturing optional. The player
        without pieces remaining, or who cannot move due to being blocked, loses the game.</string>
    <string name="logged_in_user_label">Logged in user:</string>
    <string name="log_in_button">Log In</string>
    <string name="user_username_label">Username:</string>
    <string name="user_password_label">Password:</string>
    <string name="log_in_title">Log In</string>
    <string name="green_piece_image_description">Green checkers man piece</string>
    <string name="white_piece_image_description">White checkers man piece</string>
    <string name="create_user_title">Create User</string>
    <string name="create_user_button">Create User</string>
    <string name="invalid_username_length_error" tools:ignore="PluralsCandidate">Username must be %d-%d characters!</string>
    <string name="invalid_password_length_error" tools:ignore="PluralsCandidate">Password must be %d-%d characters!</string>
    <string name="nonexistent_user_error">That user does not exists!</string>
    <string name="password_error">Invalid password!</string>
    <string name="taken_username_error">That username is already taken!</string>
    <string name="remember_label">Remember</string>
    <string name="feature_not_implemented">This feature has not been implemented yet!</string>
    <string name="invalid_conform_password_error">The passwords are not the same!</string>
    <string name="user_confirm_password_label">Confirm\nPassword:</string>
    <string name="user_created">User %s was created!</string>
    <string name="server_connection_error">Could not connect to the server!</string>
</resources>